--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="magic-ball">
                 <div class="ball">
                     <div class="screen">
-                        <p id="answer">Задай вопрос и встряхни меня!</p>
+                        <p id="answer">Задай вопрос и получи ответ от своей судьбы!</p>
                     </div>
                 </div>
             </div>
