--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap&subset=cyrillic" rel="stylesheet">
         <link rel="manifest" href="manifest.json">
+        <link rel="icon" href="icon-192x192.png" type="image/png">
     </head>
     
  <body>
